--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
     <li id="lista-item">Estudante</li>
 </ul>
 <img id="jardim" src="jardim.jpg" alt="logo da escola">
-<ul>
 </header>
 <section id="escola">
     <div id="conteudo">
@@ -27,6 +26,16 @@
     <p class="escola-texto-2">No ano de 2023 o Colégio tornou-se escola em tempo integral, através do programa Paraná Integral. </p>
 </div>
     <img id="fotoescola"    src="fotoescola.png" alt="foto da escola">
+</section>
+<section id="Estudante">
+<h2 id="estudante-titulo">Quem são nossos estudantes?</h2>
+<div id="estudante-div">
+<img id="alunos" src="aluno1.jpg" alt="imagem do aluno 1">
+<h3>Maria</h3>
+<img id="estudante-icone"    src="facebook.png" alt="imagem facebook">
+<img id="estudante-icone"    src="instagram.png" alt="imagem instagram">
+<img id="estudante-icone"    src="github.png" alt="imagem github">
+</div>
 </section>
 </body>
 </html>
