--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
    
     <li id="lista-item">Estudante</li>
 </ul>
-<img id="jardim" src="jardim.jpg" alt="logo da escola">
+<img id="jardim" src="escola.jpeg" alt="logo da escola">
 </header>
 <section id="escola">
     <div id="conteudo">
@@ -25,7 +25,7 @@
         Atendendo no início até a 4ª série do fundamental e depois gradativamente até o ensino médio.</p>
     <p class="escola-texto-2">No ano de 2023 o Colégio tornou-se escola em tempo integral, através do programa Paraná Integral. </p>
 </div>
-    <img id="fotoescola"    src="fotoescola.png" alt="foto da escola">
+    <img id="fotoescola"    src="escola.jpeg" alt="foto da escola">
 </section>
 <section id="Estudante">
 <h2 id="estudante-titulo">Quem são nossos estudantes?</h2>
@@ -33,7 +33,7 @@
 <img id="alunos" src="aluno1.jpg" alt="imagem do aluno 1">
 <h3>Maria</h3>
 <img id="estudante-icone"    src="facebook.png" alt="imagem facebook">
-<img id="estudante-icone"    src="instagram.png" alt="imagem instagram">
+<img id="estudante-icone"    src="instagram.jpeg" alt="imagem instagram">
 <img id="estudante-icone"    src="github.png" alt="imagem github">
 </div>
 </section>
