--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <img id="alunos" src="aluno1.jpg" alt="imagem do aluno 1">
 <h3>Maria</h3>
 <img id="estudante-icone"    src="facebook.png" alt="imagem facebook">
-<img id="estudante-icone"    src="instagram.jpeg" alt="imagem instagram">
+<img id="estudante-icone"    src="instagram.png" alt="imagem instagram">
 <img id="estudante-icone"    src="github.png" alt="imagem github">
 </div>
 </section>
